make all handlers passing compatible params create index with non_doc type index and get working get index with types make compile working draft accept/content-type version parsing cleanup cleanup tests failing fix deprecations and include_tyep_param cleanup passing only using params, but not many passing search type